# LetsTalk

./: .gitignore  CMakeLists.txt  LICENSE.txt  LetsTalkConfig.cmake.in  README.md  letstalkConfig.cmake.in
.github/workflows/: static.yml
cmake/: Findfastdds.cmake  Findfastrtps.cmake  IdlTarget.cmake
doc/: Doxyfile  index.html
doc/html/: ActiveObject_8hpp_source.html  Awaitable_8hpp_source.html  FastDdsAlias_8hpp_source.html  Guid_8hpp_source.html  LetsTalkFwd_8hpp_source.html  LetsTalk_8hpp_source.html  ParticipantImpl_8hpp_source.html  ParticipantLogger_8hpp_source.html  Participant_8hpp_source.html  PubSubType_8hpp_source.html  QueueWaitset_8hpp_source.html  ReactorClientImpl_8hpp_source.html  ReactorClient_8hpp_source.html  ReactorServerImpl_8hpp_source.html  ReactorServer_8hpp_source.html  Reactor_8cpp.html  Reactor_8cpp__incl.map  Reactor_8cpp__incl.md5  Reactor_8h.html  Reactor_8h__dep__incl.map  Reactor_8h__dep__incl.md5  Reactor_8h__incl.map  Reactor_8h__incl.md5  Reactor_8h_source.html  Reactor_8hpp_source.html  Reactor_8idl_source.html  ReaderListenerImpl_8hpp_source.html  ReaderListener_8hpp_source.html  RequestReplyImpl_8hpp_source.html  RequestReply_8hpp_source.html  ThreadSafeQueue_8hpp_source.html  Waitset_8hpp_source.html  annotated.html  annotated_dup.js  classes.html  classlt_1_1ActiveObject-members.html  classlt_1_1ActiveObject.html  classlt_1_1ActiveObject.js  classlt_1_1ActiveObject__inherit__graph.map  classlt_1_1ActiveObject__inherit__graph.md5  (+200 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  enums_0.js  files_0.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_12.js  functions_13.js  functions_2.js  (+26 more)
doc/xml/: ActiveObject_8cpp.xml  ActiveObject_8hpp.xml  CMakeLists_8txt.xml  FastDdsAlias_8hpp.xml  Guid_8cpp.xml  Guid_8hpp.xml  LetsTalkDetail_8cpp.xml  LetsTalkFwd_8hpp.xml  LetsTalk_8hpp.xml  ParticipantImpl_8hpp.xml  ParticipantLogger_8cpp.xml  ParticipantLogger_8hpp.xml  Participant_8cpp.xml  Participant_8hpp.xml  PubSubType_8hpp.xml  QueueWaitset_8hpp.xml  README_8md.xml  ReactorClientImpl_8hpp.xml  ReactorClient_8hpp.xml  ReactorServerImpl_8hpp.xml  ReactorServer_8hpp.xml  Reactor_8cxx.xml  Reactor_8hpp.xml  ReaderListenerImpl_8hpp.xml  ReaderListener_8hpp.xml  RequestReplyImpl_8hpp.xml  RequestReply_8hpp.xml  ThreadSafeQueue_8hpp.xml  classlt_1_1ActiveObject.xml  classlt_1_1Participant.xml  classlt_1_1Publisher.xml  classlt_1_1QueueWaitset.xml  classlt_1_1ReactorClient.xml  classlt_1_1ReactorClient_1_1Session.xml  classlt_1_1ReactorServer.xml  classlt_1_1ReactorServer_1_1Session.xml  classlt_1_1Requester.xml  classlt_1_1ThreadSafeQueue.xml  defaultProfile_8cpp.xml  dir_68267d1309a1af8e8297ef4c3efbcdba.xml  (+14 more)
example/: CMakeLists.txt  readme.md
example/fastdds/: CMakeLists.txt  HelloWorld.cxx  HelloWorld.h  HelloWorld.hpp  HelloWorldCdrAux.hpp  HelloWorldCdrAux.ipp  HelloWorldPubSubTypes.cxx  HelloWorldPublisher.cpp  HelloWorldSubscriber.cpp  HelloWorldTypeObjectSupport.cxx  readme.md
example/pubsub/: CMakeLists.txt  Listener.cpp  Publisher.cpp  QueueSubscriber.cpp  Subscriber.cpp  readme.md
example/reactor/: CMakeLists.txt  EnumToString.hpp  GarageDoor.cpp  GarageOpener.cpp
example/reqrep/: CMakeLists.txt  DivideRequester.cpp  DivideService.cpp  DivideService.idl
example/waitset/: CMakeLists.txt  waitset.cpp
fastdds/: CMakeLists.txt
fastdds/cmake/modules/: FindThirdpartyBoost.cmake
fastdds/src/cpp/: CMakeLists.txt
resources/: JsonSupportHeader.stg  JsonSupportSource.stg
src/: ActiveObject.cpp  ActiveObject.hpp  Awaitable.hpp  CMakeLists.txt  FastDdsAlias.hpp  Guid.cpp  Guid.hpp  LetsTalk.cpp  LetsTalk.hpp  LetsTalkDetail.cpp  LetsTalkDetail.hpp  LetsTalkFwd.hpp  Participant.cpp  Participant.hpp  ParticipantImpl.hpp  ParticipantLogger.cpp  ParticipantLogger.hpp  PubSubType.hpp  QueueWaitset.hpp  Reactor.cpp  Reactor.cxx  Reactor.hpp  Reactor.idl  ReactorClient.cpp  ReactorClient.hpp  ReactorClientImpl.hpp  ReactorServer.cpp  ReactorServer.hpp  ReactorServerImpl.hpp  ReaderListener.hpp  ReaderListenerImpl.hpp  RequestReply.hpp  RequestReplyImpl.hpp  ThreadSafeQueue.hpp  Waitset.hpp  defaultProfile.cpp  get_demangled_name.hpp  meta.hpp
src/LetsTalk/: ActiveObject.cpp  Awaitable.hpp  CMakeLists.txt  FastDdsAlias.hpp  Guid.cpp  Guid.hpp  LetsTalk.hpp  LetsTalkDetail.cpp  LetsTalkFwd.hpp  Participant.cpp  Participant.hpp  ParticipantImpl.hpp  ParticipantLogger.cpp  ParticipantLogger.hpp  PubSubType.hpp  Reactor.cxx  Reactor.h  Reactor.hpp  ReactorCdrAux.hpp  ReactorCdrAux.ipp  ReactorClientImpl.hpp  ReactorServer.hpp  ReactorServerImpl.hpp  ReaderListenerImpl.hpp  RequestReplyImpl.hpp  ThreadSafeQueue.hpp  Waitset.hpp
test/: ActiveObject.cpp  Big.idl  BigJson.cpp  CMakeLists.txt  Guid.cpp  HelloWorld.idl  KeepAllTest.cpp  KeyTest.cpp  Map.idl  OpenGarage.idl  PubSub.cpp  Reactor.cpp  ReqRep.cpp  ThreadSafeQueue.cpp  Union.idl  Waitset.cpp  message.cxx  message.h  message.idl  messagePubSubTypes.cxx  messagePubSubTypes.h  multiSubscribe.cpp  other.idl  ping.cpp  pong.cpp  qosProfile.cpp  reqrep.cpp
