add_executable(HelloWorldPublisher HelloWorldPublisher.cpp HelloWorld.cxx HelloWorldPubSubTypes.cxx)
add_executable(HelloWorldSubscriber HelloWorldSubscriber.cpp HelloWorld.cxx HelloWorldPubSubTypes.cxx)

target_link_libraries(HelloWorldPublisher fastrtps)
target_link_libraries(HelloWorldSubscriber fastrtps)
